k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-web-svc
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: saas-web
  ports:
    - name: http
      port: 80
      targetPort: 5000
